Bodge component list to only display resources
This mainly excludes weapons used to craft others and prime parts. These should later be listed as seperate categories, below the resources list

--- a/webpage/css/style.css
+++ b/webpage/css/style.css
@@ -5,7 +5,11 @@ body {
 
 .btn-secondary {
   color: rgb(197, 197, 197);
-  background-color: #c4c4c4;
+  background-color: #9eb8c2;
+}
+
+.btn-secondary:hover {
+  background-color: #9eb8c2;
 }
 
 .nameplate {
